2002-05-06  Darin Adler  <darin@apple.com>

	* JavaScriptCorePrefix.h: Added.
	* JavaScriptCore.pbproj/project.pbxproj: Use PFE precompiling.
	Also switch from xNDEBUG to NDEBUG.

=== Alexander 0.3c2 (v1) ===

2002-04-18  Darin Adler  <darin@apple.com>

	* JavaScriptCore.pbproj/project.pbxproj: Oops. Take out -Wstrict-prototypes, put back
	-Wmissing-prototypes.

2002-04-18  Darin Adler  <darin@apple.com>

	* JavaScriptCore.pbproj/project.pbxproj: Take out -Wmissing-prototypes
	because system headers are triggering it when we don't have
	precompiled headers on.

2002-04-18  Darin Adler  <darin@apple.com>

	Reviewed by Maciej

	* JavaScriptCore.pbproj/project.pbxproj: Turn on gcc3 and the same set of warnings
	as in the rest of Labyrinth (see top level ChangeLog for details).

2002-04-17  Maciej Stachowiak  <mjs@apple.com>

	Reviewed by: Darin Adler  <darin@apple.com>

	* kjs/testkjs.cpp: Don't include <iostream.h> to avoid gcc3
	warning.

2002-04-15  Darin Adler  <darin@apple.com>

	Reviwed by: Maciej Stachowiak  <mjs@apple.com>

	* kjs/internal.cpp:
	* kjs/property_map.cpp:
	* kjs/ustring.h:
	Removed some unneeded <config.h> includes so we are more similar
	to the real KDE sources.

2002-04-15  Darin Adler  <darin@apple.com>

	Reviwed by: Maciej Stachowiak  <mjs@apple.com>

	Merged changes from KDE 3.0 final and did some build fixes.

	* JavaScriptCore.pbproj/project.pbxproj: Added nodes2string.cpp.

	* kjs/grammar.*: Regenerated.
	* kjs/*.lut.h: Regenerated.

2002-04-08  Darin Adler  <darin@apple.com>

	Reviwed by: Maciej Stachowiak  <mjs@apple.com>

	* JavaScriptCore.pbproj/project.pbxproj: Re-added -Wno-format-y2k.

2002-04-04  Darin Adler  <darin@apple.com>

	* JavaScriptCore.pbproj/project.pbxproj: Add an Unoptimized build
	style: exactly like Development except without the -O.

2002-04-03  Darin Adler  <darin@apple.com>

	* kjs/Makefile.am: Gratuitous cleanup.

2002-04-02  Darin Adler  <darin@apple.com>
