@@ -88,6 +88,11 @@ namespace KJS {
      */
     static bool collecting;
 #endif
+#ifdef APPLE_CHANGES
+    static int numInterpreters();
+    static int numGCNotAllowedObjects();
+    static int numReferencedObjects();
+#endif
   private:
     static CollectorBlock* root;
     static CollectorBlock* currentBlock;
